Fix navigation item overflow-y scrollbar bug on Chrome. (#1585)

--- a/themes/finna2/less/finna/navigation.less
+++ b/themes/finna2/less/finna/navigation.less
@@ -463,8 +463,9 @@
 
   .card-selection {
     @media (max-width: @screen-sm-max) {
-      overflow-y: scroll;
+      overflow-y: auto;
       overflow-x: hidden;
+      height: 100%;
       max-height: 200px;
     }
     p {
